[package]
name = "lc"
version = "0.1.0"
authors = ["Erick Hernandez Curiel <erick@hernandezcuriel.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-interner = { git = "https://github.com/ErickHdez96/string-interner.git" }
logos = "0.11"
anyhow = "1"
rustyline = "7.0.0"
dirs = "3.0.1"
log = "0.4"
env_logger = "0.8"
