[package]
name = "lc"
version = "0.1.0"
authors = ["Erick Hernandez Curiel <erick@hernandezcuriel.dev>"]
edition = "2018"

[dependencies]
string_cache = { version = "0.8", default-features = false }
logos = "0.11"
rustyline = "7.0.0"
dirs = "3.0.1"
log = "0.4"
env_logger = "0.8"
unicode-width = "0.1"

[dev-dependencies]
expect-test = "1"
